Make test classes public and refactor test code
Made test classes public to align with JUnit requirements. Refactored test methods for better readability, added a ServiceTestSuite and ControllerTestSuite to group related tests, and included additional dependency for test suite support in the `pom.xml`. Removed unnecessary fields from `CartControllerMVCTest` and refined assertions.